* [*] Fix P2 Comments: Empty list item appears after embedded lists [#18690]
* [*] Fix Reader Comments: Reply button is hidden when pasting long text (the ap now uses a sheet) [#17964]
* [*] Fix Reader Comments: Cells could sometimes be displayed overlapping another cell [#17653]
* [*] Fix Notifications: quote blocks in the Reply screen are not styled correctly [#13971]
* [*] Fix Notifications pointing to large threads sometimes break the app [#23993]
* [*] Fix an issue with search results disappearing after returning from site details [#24121]
* [*] Fix Reader: Opening comments is slow [#21887]
* [*] Fix an issue with comments button being disabled when shown from Comments or Notifications [#24120]
* [*] Fix unexpected "unsaved changes" notice when closing an un-edited post containing media in the experimental editor [#24102]
* [*] Add "Notification Settings" bell to the "Site Details" screen [#24134]
* [*] Fix an issue where the "Notifications Settings" bell for site subscriptions was not updated after the changes [#24134]
* [*] Update the logic behind the bell. It now show the "bell with waves" when push notifications are enabled [#24134]

25.7
-----
* [**] Add Image Playground support (part of Apple Intelligence suite) for adding images to your posts, generated featured image, site icons, and more [#23688]
* [**] Enable history navigation (undo and redo) for the experimental editor. [#23961]
* [**] Various bug fixes and improvements in the new experimental editor [#23919]
* [**] Enhance the Gravatar Quick Editor by adding features that allow users to delete and share their avatars. [#23868]
* [**] Add new lightbox screen for images with modern transitions and enhanced performance [#23922]
* [**] Add the capability to create an avatar using Apple Image Playground through the Gravatar Quick Editor. [#23868]
* [*] Fix sorting in Stats Subscriber Emails (latest first) [#23913]
* [*] Reader: Fix a couple of rare crashes in Reader [#23907]