@@ -19,6 +19,8 @@
 * [*] Fix Reader Comments: Reply button is hidden when pasting long text (the ap now uses a sheet) [#17964]
 * [*] Fix Reader Comments: Cells could sometimes be displayed overlapping another cell [#17653]
 * [*] Fix Notifications: quote blocks in the Reply screen are not styled correctly [#13971]
+* [*] Fix an issue with "Follow Conversation" button not visible on some P2s [#24135]
+* [*] Fix an issue with "Enable Comments Notifications" button being visible and not working correctly on some P2s [#24135]
 * [*] Fix Notifications pointing to large threads sometimes break the app [#23993]
 * [*] Fix an issue with search results disappearing after returning from site details [#24121]
 * [*] Fix Reader: Opening comments is slow [#21887]
